Add login endpoints